saved progress, fixing a bug, kinda stuck

--- a/src/App.css
+++ b/src/App.css
@@ -410,4 +410,8 @@ button:hover {
   background-color: #0056b3;
 }
 
+.home-stats {
+  color: white
+}
+
   
